--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "templates"]
-	path = templates
-	url = git@github.com:tud-math-script/templates.git
+        path = templates
+        url = https://github.com/tud-math-script/templates.git
